--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -188,14 +188,88 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cbTermsConditions" />
 
+            <TextView
+                android:id="@+id/tvOr"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:layout_marginStart="@dimen/space_32"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/space_32"
+                android:background="@drawable/or_bg"
+                android:fontFamily="@font/lato_bold"
+                android:gravity="center"
+                android:text="@string/or"
+                android:textAllCaps="true"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
+
+            <TextView
+                android:id="@+id/tvSignUpWith"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/default_space"
+                android:fontFamily="@font/lato_semibold"
+                android:text="@string/signup_with"
+                android:textColor="@color/white"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvOr" />
+
+            <RelativeLayout
+                android:id="@+id/llGpl"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_38ssp"
+                android:layout_marginStart="@dimen/space_32"
+                android:layout_marginTop="@dimen/default_space"
+                android:layout_marginEnd="@dimen/space_32"
+                android:background="@drawable/shape_g_plus_bg"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvSignUpWith">
+
+                <ImageView
+                    android:id="@+id/ivGLogo"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_margin="@dimen/_8sdp"
+                    android:layout_marginStart="@dimen/space_8"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_google" />
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:layout_toEndOf="@id/ivGLogo"
+                    android:background="#BE3610" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:maxLines="1"
+                    android:fontFamily="@font/lato_bold"
+                    android:text="@string/google"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                    android:textColor="@color/white" />
+
+            </RelativeLayout>
 
             <View
                 android:id="@+id/mDivider"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginTop="@dimen/space_32"
+                android:layout_marginTop="@dimen/_16sdp"
                 android:background="@color/semi_white"
-                app:layout_constraintTop_toBottomOf="@id/btnSignUp" />
+                app:layout_constraintTop_toBottomOf="@id/llGpl" />
+
 
             <TextView
                 android:id="@+id/tvAlreadyHasAccount"
